--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/jda/AlgorithmPrograms/BinarySearchLIst.java=UTF-8
 encoding//src/com/jda/DataStructurePrograms/LinkedList.java=UTF-8
+encoding//src/com/jda/ObjectOrientedPrograms/Inventory.java=UTF-8
